fix scores not showing time properly in events history. Initial implementation of player number (playerJersey) and team logo

--- a/fe/src/styles/eventHistory.scss
+++ b/fe/src/styles/eventHistory.scss
@@ -309,3 +309,15 @@
     }
   }
 }
+
+.event-player-team-info {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  .team-logo-miniature {
+    width: 28px;
+    height: 28px;
+    object-fit: contain;
+  }
+}
